# betterdocs-faq

./: .gitignore  ACCEPTABLE_USE.md  LICENSE  README.md  pyproject.toml  requirements.txt
betterdocs_faq/: scraper.py
betterdocs_faq/templates/faq/: list.html  page.html  single.html
betterdocs_faq/util/: legal.py
