[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "betterdocs_faq"
version = "1"
description = "Scraper for FAQ content written using the BetterDocs plugin for Wordpress"
authors = [
    {name = "Jake Kronika"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.2",
    "jinja2==3.1.6",
    "lxml==6.0.2",
]
